feat: add configurable retry limit and fast test mode
- Add --max-attempts CLI argument (default: 5)
- Add PHOENIX_ENABLED env var for fast test execution
- Update test runner with --phoenix and --coverage options
- Increase test coverage to 70% (42 tests)
- Update Python requirement to 3.10+
- Update README with usage examples and troubleshooting

--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,18 @@ env/
 dist/
 build/
 
+# Coverage
+.coverage
+htmlcov/
+coverage.xml
+
 # Environment
 .env
 
 # Uploads and outputs
 uploads/
 raw_outputs/
+output/
 
 # Node
 frontend/node_modules/
